--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.1.3",
     "@nestjs/swagger": "^11.2.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/multer": "^1.4.13",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
