nodemailer added OTP mail login

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 SWAGGER_USER=Sushant
 SWAGGER_PASS=1234
+
+EMAIL_HOST = smtp.gmail.com 
+PORT = 587
+EMAIL_USER = sushant07.henceforth@gmail.com
+EMAIL_PASSWORD= cney incn clkk fqqp  
+# APP_PASSWORD=cney incn clkk fqqp
