--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1"
